feat: tailwind css and shadcn ui

--- a/package.json
+++ b/package.json
@@ -7,44 +7,55 @@
     "build": "remix build",
     "dev": "remix dev --manual",
     "start": "remix-serve ./build/index.js",
-    "check": "run-p check:*",
+    "check": "pnpm /^check:.*/",
     "check:tsc": "tsc --noEmit",
     "check:prettier": "prettier --check \"**/*.{ts,tsx,json,md,mdx}\" --cache",
     "check:eslint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "check:stylelint": "stylelint ./app/styles/*.css",
-    "check:prisma": "prisma validate",
-    "fix": "run-p fix:*",
+    "checks:prisma": "prisma validate",
+    "fix": "pnpm /^fix:.*/",
     "fix:prettier": "prettier --write \"**/*.{ts,tsx,json,md,mdx}\" --cache",
     "fix:eslint": "eslint . --fix --cache --cache-location ./node_modules/.cache/eslint .",
     "fix:stylelint": "stylelint --fix ./app/styles/*.css",
-    "fix:prisma": "prisma format && prisma validate",
+    "fixes:prisma": "prisma format && prisma validate",
     "debug:eslint": "DEBUG=eslint:cli-engine nr check:lint",
     "taze": "taze",
     "clean": "rm -rf build public/build",
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "1.0.2",
     "@remix-run/css-bundle": "^2.1.0",
     "@remix-run/node": "^2.1.0",
     "@remix-run/react": "^2.1.0",
     "@remix-run/serve": "^2.1.0",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.0.0",
     "isbot": "^3.7.0",
+    "lucide-react": "0.288.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "1.14.0",
+    "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.1.0",
     "@remix-run/eslint-config": "^2.1.0",
+    "@tailwindcss/forms": "0.5.6",
+    "@tailwindcss/typography": "0.5.10",
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
+    "autoprefixer": "10.4.16",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-prettier": "5.0.1",
+    "eslint-plugin-tailwindcss": "3.13.0",
     "prettier": "3.0.3",
     "prettier-plugin-tailwindcss": "0.5.6",
     "stylelint": "^15.11.0",
     "stylelint-config-standard": "^34.0.0",
     "stylelint-config-tailwindcss": "^0.0.7",
+    "tailwindcss": "3.3.3",
     "taze": "0.11.4",
     "typescript": "^5.2.2"
   },
