--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,7 +1,8 @@
 {
-  "extends": ["stylelint-config-standard", "stylelint-config-tailwindcss"],
-  "rules": {
-    "rule-empty-line-before": "never",
-    "selector-class-pattern": null
-  }
+	"extends": ["stylelint-config-standard", "stylelint-config-tailwindcss"],
+	"rules": {
+		"rule-empty-line-before": null,
+		"selector-class-pattern": null,
+		"custom-property-empty-line-before": null
+	}
 }
