--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
     "isbot": "^3.7.0",
-    "lucide-react": "0.288.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "1.14.0",
     "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
+    "@iconify/react": "4.1.1",
     "@remix-run/dev": "^2.1.0",
     "@remix-run/eslint-config": "^2.1.0",
     "@tailwindcss/forms": "0.5.6",
