--- a/package.json
+++ b/package.json
@@ -12,19 +12,27 @@
     "check:prettier": "prettier --check \"**/*.{ts,tsx,json,md,mdx}\" --cache",
     "check:eslint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "check:stylelint": "stylelint ./app/styles/*.css",
-    "checks:prisma": "prisma validate",
+    "check:prisma": "prisma validate",
     "fix": "pnpm /^fix:.*/",
     "fix:prettier": "prettier --write \"**/*.{ts,tsx,json,md,mdx}\" --cache",
     "fix:eslint": "eslint . --fix --cache --cache-location ./node_modules/.cache/eslint .",
     "fix:stylelint": "stylelint --fix ./app/styles/*.css",
-    "fixes:prisma": "prisma format && prisma validate",
+    "fix:prisma": "prisma format && prisma validate",
     "debug:eslint": "DEBUG=eslint:cli-engine nr check:lint",
-    "taze": "taze",
     "clean": "rm -rf build public/build",
+    "taze": "taze",
+    "db:push": "prisma db push",
+    "db:reset": "prisma db push --force-reset",
+    "db:seed": "prisma db seed",
+    "db:migrate": "prisma migrate dev",
+    "db:generate": "prisma generate",
+    "db:studio": "prisma studio",
+    "db:docs": "prisma-docs-generator serve",
     "postinstall": "prisma generate"
   },
   "dependencies": {
     "@fontsource-variable/grandstander": "5.0.17",
+    "@prisma/client": "5.4.2",
     "@radix-ui/react-slot": "1.0.2",
     "@remix-run/css-bundle": "^2.1.0",
     "@remix-run/node": "^2.1.0",
@@ -44,6 +52,7 @@
     "@remix-run/eslint-config": "^2.1.0",
     "@tailwindcss/forms": "0.5.6",
     "@tailwindcss/typography": "0.5.10",
+    "@types/node": "20.8.7",
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
     "autoprefixer": "10.4.16",
@@ -53,14 +62,22 @@
     "eslint-plugin-tailwindcss": "3.13.0",
     "prettier": "3.0.3",
     "prettier-plugin-tailwindcss": "0.5.6",
+    "prisma": "5.4.2",
+    "prisma-docs-generator": "0.8.0",
     "stylelint": "^15.11.0",
     "stylelint-config-standard": "^34.0.0",
     "stylelint-config-tailwindcss": "^0.0.7",
     "tailwindcss": "3.3.3",
     "taze": "0.11.4",
+    "ts-node": "10.9.1",
+    "tsconfig-paths": "4.2.0",
+    "tsx": "3.14.0",
     "typescript": "^5.2.2"
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
