--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   },
   "dependencies": {
     "@fontsource-variable/grandstander": "5.0.17",
+    "@planetscale/database": "1.11.0",
+    "@prisma/adapter-planetscale": "5.4.3",
     "@prisma/client": "5.4.2",
     "@radix-ui/react-slot": "1.0.2",
     "@remix-run/css-bundle": "^2.1.0",
@@ -40,13 +42,16 @@
     "@remix-run/serve": "^2.1.0",
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
+    "dotenv": "16.3.1",
     "isbot": "^3.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "1.14.0",
-    "tailwindcss-animate": "1.0.7"
+    "tailwindcss-animate": "1.0.7",
+    "undici": "5.26.4"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "4.1.1",
     "@iconify/react": "4.1.1",
     "@remix-run/dev": "^2.1.0",
     "@remix-run/eslint-config": "^2.1.0",
