feat: configs and favicons

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@fontsource-variable/grandstander": "5.0.17",
+    "@fontsource/inter": "5.0.14",
     "@planetscale/database": "1.11.0",
     "@prisma/adapter-planetscale": "5.4.3",
     "@prisma/client": "5.4.2",
