chore: improve configs and scripts

--- a/package.json
+++ b/package.json
@@ -21,12 +21,17 @@
     "debug:eslint": "DEBUG=eslint:cli-engine nr check:lint",
     "clean": "rm -rf build public/build",
     "taze": "taze",
-    "db:push": "prisma db push",
-    "db:reset": "prisma db push --force-reset",
-    "db:seed": "prisma db seed",
-    "db:migrate": "prisma migrate dev",
     "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:push:prod": "dotenv -e .env.production prisma db push",
+    "db:reset": "prisma db push --force-reset",
+    "db:reset:prod": "dotenv -e .env.production prisma db push --force-reset",
+    "db:migrate": "prisma migrate dev",
+    "db:migrate:prod": "dotenv -e .env.production prisma migrate dev",
+    "db:seed": "prisma db seed",
+    "db:seed:prod": "dotenv -e .env.production prisma db seed",
     "db:studio": "prisma studio",
+    "db:studio:prod": "dotenv -e .env.production prisma studio",
     "db:docs": "prisma-docs-generator serve",
     "postinstall": "prisma generate"
   },
@@ -62,6 +67,7 @@
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
     "autoprefixer": "10.4.16",
+    "dotenv-cli": "7.3.0",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-prettier": "5.0.1",
