--- a/package.json
+++ b/package.json
@@ -9,18 +9,15 @@
     "start": "remix-serve ./build/index.js",
     "check": "pnpm /^check:.*/",
     "check:tsc": "tsc --noEmit",
-    "check:prettier": "prettier --check \"**/*.{ts,tsx,json,md,mdx}\" --cache",
-    "check:eslint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
-    "check:stylelint": "stylelint ./app/styles/*.css",
+    "check:prettier": "prettier --cache --check '**/*.{ts,tsx,json,md,mdx}'",
+    "check:eslint": "eslint --cache .",
+    "check:stylelint": "stylelint --cache ./app/styles/*.css",
     "check:prisma": "prisma validate",
     "fix": "pnpm /^fix:.*/",
-    "fix:prettier": "prettier --write \"**/*.{ts,tsx,json,md,mdx}\" --cache",
-    "fix:eslint": "eslint . --fix --cache --cache-location ./node_modules/.cache/eslint .",
-    "fix:stylelint": "stylelint --fix ./app/styles/*.css",
+    "fix:prettier": "prettier --cache --write '**/*.{ts,tsx,json,md,mdx}'",
+    "fix:eslint": "eslint --cache --fix .",
+    "fix:stylelint": "stylelint --cache --fix ./app/styles/*.css",
     "fix:prisma": "prisma format && prisma validate",
-    "debug:eslint": "DEBUG=eslint:cli-engine nr check:lint",
-    "clean": "rm -rf build public/build",
-    "taze": "taze",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:push:prod": "dotenv -e .env.production prisma db push",
@@ -33,11 +30,14 @@
     "db:studio": "prisma studio",
     "db:studio:prod": "dotenv -e .env.production prisma studio",
     "db:docs": "prisma-docs-generator serve",
+    "debug:eslint": "DEBUG=eslint:cli-engine nr check:lint",
+    "clean": "rm -rf build public/build",
+    "taze": "taze",
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@fontsource-variable/grandstander": "5.0.17",
-    "@fontsource/inter": "5.0.14",
+    "@fontsource-variable/grandstander": "5.0.18",
+    "@fontsource/inter": "5.0.15",
     "@planetscale/database": "1.11.0",
     "@prisma/adapter-planetscale": "5.4.3",
     "@prisma/client": "5.4.2",
@@ -54,15 +54,16 @@
     "react-dom": "^18.2.0",
     "tailwind-merge": "1.14.0",
     "tailwindcss-animate": "1.0.7",
-    "undici": "5.26.4"
+    "undici": "5.26.5"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
     "@iconify/react": "4.1.1",
     "@remix-run/dev": "^2.1.0",
-    "@remix-run/eslint-config": "^2.1.0",
+    "@remix-run/eslint-config": "2.1.0",
     "@tailwindcss/forms": "0.5.6",
     "@tailwindcss/typography": "0.5.10",
+    "@types/eslint": "8.44.6",
     "@types/node": "20.8.7",
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
@@ -70,6 +71,7 @@
     "dotenv-cli": "7.3.0",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-import": "2.29.0",
     "eslint-plugin-prettier": "5.0.1",
     "eslint-plugin-tailwindcss": "3.13.0",
     "prettier": "3.0.3",
