--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,6 @@
     "jsx": "react-jsx",
     "lib": ["DOM", "DOM.Iterable", "ES2022"],
     "moduleResolution": "Bundler",
-    "noEmit": true, // Remix building everything in `remix build`
     "noUncheckedIndexedAccess": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
@@ -18,7 +17,8 @@
     "target": "ES2022",
     "paths": {
       "~/*": ["./app/*"]
-    }
+    },
+    "noEmit": true // Remix building everything in `remix build`
   },
   "include": [
     "remix.env.d.ts",
