--- a/package.json
+++ b/package.json
@@ -46,10 +46,12 @@
     "@remix-run/node": "^2.1.0",
     "@remix-run/react": "^2.1.0",
     "@remix-run/serve": "^2.1.0",
+    "@types/pluralize": "0.0.32",
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
     "dotenv": "16.3.1",
     "isbot": "^3.7.0",
+    "pluralize": "8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "1.14.0",
