feat: znv to parse env

--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "type": "module",
   "scripts": {
     "build": "remix build",
-    "dev": "NODE_ENV=development pnpm check:env && remix dev --manual",
+    "dev": "pnpm check:env && remix dev --manual",
+    "dev:prod": "dotenv -e .env.production pnpm check:env",
     "start": "remix-serve ./build/index.js",
     "check": "pnpm /^check:.*/",
-    "check:env": "NODE_ENV=development tsx scripts/check-env.ts",
+    "check:env": "tsx scripts/check-env.ts",
     "check:tsc": "tsc --noEmit",
     "check:prettier": "prettier --cache --check '**/*.{ts,tsx,json,md,mdx}'",
     "check:eslint": "eslint --cache .",
@@ -40,8 +41,8 @@
     "@fontsource-variable/grandstander": "5.0.18",
     "@fontsource/inter": "5.0.15",
     "@planetscale/database": "1.11.0",
-    "@prisma/adapter-planetscale": "5.4.3",
-    "@prisma/client": "5.4.2",
+    "@prisma/adapter-planetscale": "5.5.0",
+    "@prisma/client": "5.5.0",
     "@radix-ui/react-slot": "1.0.2",
     "@remix-run/css-bundle": "^2.1.0",
     "@remix-run/node": "^2.1.0",
@@ -57,7 +58,10 @@
     "react-dom": "^18.2.0",
     "tailwind-merge": "1.14.0",
     "tailwindcss-animate": "1.0.7",
-    "undici": "5.26.5"
+    "undici": "5.26.5",
+    "znv": "0.4.0",
+    "zod": "3.22.4",
+    "zod-form-data": "2.0.2"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
@@ -67,7 +71,7 @@
     "@tailwindcss/forms": "0.5.6",
     "@tailwindcss/typography": "0.5.10",
     "@types/eslint": "8.44.6",
-    "@types/node": "20.8.7",
+    "@types/node": "20.8.8",
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
     "autoprefixer": "10.4.16",
@@ -79,12 +83,12 @@
     "eslint-plugin-tailwindcss": "3.13.0",
     "prettier": "3.0.3",
     "prettier-plugin-tailwindcss": "0.5.6",
-    "prisma": "5.4.2",
+    "prisma": "5.5.0",
     "prisma-docs-generator": "0.8.0",
     "stylelint": "^15.11.0",
     "stylelint-config-standard": "^34.0.0",
     "stylelint-config-tailwindcss": "^0.0.7",
-    "tailwindcss": "3.3.3",
+    "tailwindcss": "3.3.4",
     "taze": "0.11.4",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.2.0",
