--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#9294f5",
-    "activityBar.background": "#9294f5",
-    "activityBar.foreground": "#15202b",
-    "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#cc1317",
+    "activityBar.activeBackground": "#766181",
+    "activityBar.background": "#766181",
+    "activityBar.foreground": "#e7e7e7",
+    "activityBar.inactiveForeground": "#e7e7e799",
+    "activityBarBadge.background": "#483718",
     "activityBarBadge.foreground": "#e7e7e7",
     "commandCenter.border": "#e7e7e799",
-    "sash.hoverBorder": "#9294f5",
-    "statusBar.background": "#6366f1",
+    "sash.hoverBorder": "#766181",
+    "statusBar.background": "#5b4b64",
     "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#9294f5",
-    "statusBarItem.remoteBackground": "#6366f1",
+    "statusBarItem.hoverBackground": "#766181",
+    "statusBarItem.remoteBackground": "#5b4b64",
     "statusBarItem.remoteForeground": "#e7e7e7",
-    "titleBar.activeBackground": "#6366f1",
+    "titleBar.activeBackground": "#5b4b64",
     "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.inactiveBackground": "#6366f199",
+    "titleBar.inactiveBackground": "#5b4b6499",
     "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#6366f1"
+  "peacock.color": "#5B4B64"
 }
