--- a/package.json
+++ b/package.json
@@ -66,7 +66,6 @@
     "zod-form-data": "2.0.2"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "4.1.1",
     "@iconify/react": "4.1.1",
     "@remix-run/dev": "^2.1.0",
     "@remix-run/eslint-config": "2.1.0",
@@ -84,6 +83,7 @@
     "eslint-plugin-prettier": "5.0.1",
     "eslint-plugin-tailwindcss": "3.13.0",
     "prettier": "3.0.3",
+    "prettier-plugin-organize-imports": "3.2.3",
     "prettier-plugin-tailwindcss": "0.5.6",
     "prisma": "5.5.2",
     "prisma-docs-generator": "0.8.0",
