feat: logo component

--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "check:env": "tsx scripts/check-env.ts",
     "check:env:prod": "dotenv -e .env.production tsx scripts/check-env.ts",
     "check:tsc": "tsc --noEmit",
-    "check:prettier": "prettier --cache --check '**/*.{ts,tsx,json,md,mdx}'",
+    "check:prettier": "prettier --cache --check '**/*.{js,mjs,cjs,ts,tsx,json,md,mdx}'",
     "check:eslint": "eslint --cache .",
     "check:stylelint": "stylelint --cache ./app/styles/*.css",
     "check:prisma": "prisma validate",
     "fix": "pnpm /^fix:.*/",
-    "fix:prettier": "prettier --cache --write '**/*.{ts,tsx,json,md,mdx}'",
+    "fix:prettier": "prettier --cache --write '**/*.{js,mjs,cjs,ts,tsx,json,md,mdx}'",
     "fix:eslint": "eslint --cache --fix .",
     "fix:stylelint": "stylelint --cache --fix ./app/styles/*.css",
     "fix:prisma": "prisma format && prisma validate",
@@ -92,8 +92,6 @@
     "stylelint-config-tailwindcss": "^0.0.7",
     "tailwindcss": "3.3.5",
     "taze": "0.11.4",
-    "ts-node": "10.9.1",
-    "tsconfig-paths": "4.2.0",
     "tsx": "3.14.0",
     "typescript": "^5.2.2"
   },
