feat: theme mode button and menu

--- a/package.json
+++ b/package.json
@@ -45,12 +45,14 @@
     "@planetscale/database": "1.11.0",
     "@prisma/adapter-planetscale": "5.5.2",
     "@prisma/client": "5.5.2",
+    "@radix-ui/react-dropdown-menu": "2.0.6",
     "@radix-ui/react-slot": "1.0.2",
     "@remix-run/css-bundle": "^2.1.0",
     "@remix-run/node": "^2.1.0",
     "@remix-run/react": "^2.1.0",
     "@remix-run/serve": "^2.1.0",
     "@types/pluralize": "0.0.32",
+    "@uidotdev/usehooks": "2.4.1",
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
     "dotenv": "16.3.1",
@@ -62,6 +64,7 @@
     "tailwind-merge": "1.14.0",
     "tailwindcss-animate": "1.0.7",
     "undici": "5.26.5",
+    "usehooks-ts": "2.9.1",
     "znv": "0.4.0",
     "zod": "3.22.4",
     "zod-form-data": "2.0.2"
