feat: reorder package scripts

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,23 +1,24 @@
 {
   "recommendations": [
-    "mikestead.dotenv",
-    "dbaeumer.vscode-eslint",
-    "moalamri.inline-fold",
-    "csstools.postcss",
-    "esbenp.prettier-vscode",
-    "yoavbls.pretty-ts-errors",
-    "prisma.prisma",
+    "antfu.iconify",
     "artdiniz.quitcontrol-vscode",
-    "codeforge.remix-forge",
-    "stylelint.vscode-stylelint",
-    "bradlc.vscode-tailwindcss",
-    "faisalfajri.tailwind-dark-theme",
-    "yzhang.markdown-all-in-one",
-    "johnpapa.vscode-peacock",
-    "bierner.markdown-preview-github-styles",
     "bierner.markdown-mermaid",
+    "bierner.markdown-preview-github-styles",
+    "bradlc.vscode-tailwindcss",
+    "codeforge.remix-forge",
+    "csstools.postcss",
     "davidanson.vscode-markdownlint",
+    "dbaeumer.vscode-eslint",
+    "esbenp.prettier-vscode",
+    "faisalfajri.tailwind-dark-theme",
+    "johnpapa.vscode-peacock",
+    "mikestead.dotenv",
+    "moalamri.inline-fold",
+    "prisma.prisma",
     "streetsidesoftware.code-spell-checker",
-    "usernamehw.errorlens"
+    "stylelint.vscode-stylelint",
+    "usernamehw.errorlens",
+    "yoavbls.pretty-ts-errors",
+    "yzhang.markdown-all-in-one"
   ]
 }
