--- a/package.json
+++ b/package.json
@@ -23,19 +23,20 @@
     "fix:prisma": "prisma format && prisma validate",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
-    "db:push:prod": "dotenv -e .env.production prisma db push",
     "db:reset": "prisma db push --force-reset",
-    "db:reset:prod": "dotenv -e .env.production prisma db push --force-reset",
     "db:migrate": "prisma migrate dev",
-    "db:migrate:prod": "dotenv -e .env.production prisma migrate dev",
     "db:seed": "prisma db seed",
-    "db:seed:prod": "dotenv -e .env.production prisma db seed",
     "db:studio": "prisma studio",
-    "db:studio:prod": "dotenv -e .env.production prisma studio",
     "db:docs": "prisma-docs-generator serve",
+    "db:push:prod": "dotenv -e .env.production prisma db push",
+    "db:reset:prod": "dotenv -e .env.production prisma db push --force-reset",
+    "db:migrate:prod": "dotenv -e .env.production prisma migrate dev",
+    "db:seed:prod": "dotenv -e .env.production prisma db seed",
+    "db:studio:prod": "dotenv -e .env.production prisma studio",
     "debug:eslint": "DEBUG=eslint:cli-engine nr check:lint",
     "clean": "rm -rf build public/build",
     "taze": "taze",
+    "prebuild": "prisma db push",
     "postinstall": "prisma generate"
   },
   "dependencies": {
