--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@remix-run/node": "^2.1.0",
     "@remix-run/react": "^2.1.0",
     "@remix-run/serve": "^2.1.0",
+    "@remix-run/server-runtime": "2.2.0",
     "@types/pluralize": "0.0.32",
     "@uidotdev/usehooks": "2.4.1",
     "class-variance-authority": "0.7.0",
@@ -61,6 +62,12 @@
     "pluralize": "8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remix-auth": "3.6.0",
+    "remix-auth-form": "1.4.0",
+    "remix-auth-github": "1.6.0",
+    "remix-auth-google": "1.3.0",
+    "remix-auth-oauth2": "1.11.0",
+    "remix-auth-twitter": "2.0.2",
     "remix-themes": "1.2.2",
     "tailwind-merge": "1.14.0",
     "tailwindcss-animate": "1.0.7",
