--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,14 @@ SESSION_SECRET=
 RESEND_API_KEY=
 UPLOADCARE_PUBLIC_KEY=
 
+# For auth
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+TWITTER_CLIENT_ID=
+TWITTER_CLIENT_SECRET=
+
 # For container with Docker Compose
 MYSQL_ROOT_PASSWORD=
 MYSQL_USER=
