docs: dogokit url

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -4,5 +4,5 @@ contact_links:
     url: https://github.com/dogokit/dogokit-remix/discussions/category_choices
     about: Ask questions and discuss with the community
   - name: Visit the site
-    url: https://dogokit.com/remix
+    url: https://remix.dogokit.com
     about: Check out the examples
