feat: use vite and upgrade deps

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "noEmit": true // Remix building everything in `remix build`
   },
   "include": [
-    "remix.env.d.ts",
+    "env.d.ts",
     ".eslintrc.cjs",
     "**/*.ts",
     "**/*.tsx",
