--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "usehooks-ts": "2.9.1",
     "znv": "0.4.0",
     "zod": "3.22.4",
-    "zod-form-data": "2.0.2"
+    "zod-form-data": "2.0.2",
+    "zodix": "0.4.4"
   },
   "devDependencies": {
     "@iconify/react": "4.1.1",
