--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "vite build && vite build --ssr",
-    "dev": "pnpm check:env && vite dev --port 3000",
-    "dev:prod": "dotenv -e .env.production vite dev --port 3000",
+    "build": "remix build",
+    "dev": "pnpm check:env && remix dev --manual",
+    "dev:prod": "dotenv -e .env.production pnpm check:env",
     "start": "remix-serve ./build/index.js",
     "check": "pnpm /^check:.*/",
     "check:env": "tsx scripts/check-env.ts",
@@ -48,10 +48,10 @@
     "@prisma/client": "5.5.2",
     "@radix-ui/react-dropdown-menu": "2.0.6",
     "@radix-ui/react-slot": "1.0.2",
-    "@remix-run/css-bundle": "^2.2.0",
-    "@remix-run/node": "^2.2.0",
-    "@remix-run/react": "^2.2.0",
-    "@remix-run/serve": "^2.2.0",
+    "@remix-run/css-bundle": "^2.1.0",
+    "@remix-run/node": "^2.1.0",
+    "@remix-run/react": "^2.1.0",
+    "@remix-run/serve": "^2.1.0",
     "@remix-run/server-runtime": "2.2.0",
     "@types/pluralize": "0.0.32",
     "@uidotdev/usehooks": "2.4.1",
@@ -68,9 +68,9 @@
     "remix-auth-google": "1.3.0",
     "remix-auth-twitter": "2.0.2",
     "remix-themes": "1.2.2",
-    "tailwind-merge": "2.0.0",
+    "tailwind-merge": "1.14.0",
     "tailwindcss-animate": "1.0.7",
-    "undici": "5.27.2",
+    "undici": "5.26.5",
     "usehooks-ts": "2.9.1",
     "znv": "0.4.0",
     "zod": "3.22.4",
@@ -79,17 +79,17 @@
   },
   "devDependencies": {
     "@iconify/react": "4.1.1",
-    "@remix-run/dev": "^2.2.0",
-    "@remix-run/eslint-config": "2.2.0",
+    "@remix-run/dev": "^2.1.0",
+    "@remix-run/eslint-config": "2.1.0",
     "@tailwindcss/forms": "0.5.6",
     "@tailwindcss/typography": "0.5.10",
     "@types/eslint": "8.44.6",
-    "@types/node": "20.8.10",
-    "@types/react": "^18.2.34",
+    "@types/node": "20.8.9",
+    "@types/react": "^18.2.32",
     "@types/react-dom": "^18.2.14",
     "autoprefixer": "10.4.16",
     "dotenv-cli": "7.3.0",
-    "eslint": "^8.53.0",
+    "eslint": "^8.52.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-import": "2.29.0",
     "eslint-plugin-prettier": "5.0.1",
@@ -103,11 +103,9 @@
     "stylelint-config-standard": "^34.0.0",
     "stylelint-config-tailwindcss": "^0.0.7",
     "tailwindcss": "3.3.5",
-    "taze": "0.12.0",
+    "taze": "0.11.4",
     "tsx": "3.14.0",
-    "typescript": "^5.2.2",
-    "vite": "4.5.0",
-    "vite-tsconfig-paths": "4.2.1"
+    "typescript": "^5.2.2"
   },
   "engines": {
     "node": ">=18.0.0"
