--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@conform-to/react": "0.9.0",
+    "@conform-to/zod": "0.9.0",
     "@fontsource-variable/grandstander": "5.0.18",
     "@fontsource-variable/inconsolata": "5.0.15",
     "@fontsource/inter": "5.0.15",
@@ -48,6 +50,7 @@
     "@prisma/adapter-planetscale": "5.5.2",
     "@prisma/client": "5.5.2",
     "@radix-ui/react-dropdown-menu": "2.0.6",
+    "@radix-ui/react-label": "2.0.2",
     "@radix-ui/react-slot": "1.0.2",
     "@remix-run/css-bundle": "^2.2.0",
     "@remix-run/node": "^2.2.0",
