--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@remix-run/server-runtime": "2.2.0",
     "@types/pluralize": "0.0.32",
     "@uidotdev/usehooks": "2.4.1",
+    "bcryptjs": "2.4.3",
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
     "dotenv": "16.3.1",
@@ -72,9 +73,11 @@
     "remix-auth-google": "1.3.0",
     "remix-auth-twitter": "2.0.2",
     "remix-themes": "1.2.2",
+    "remix-utils": "7.1.0",
     "tailwind-merge": "1.14.0",
     "tailwindcss-animate": "1.0.7",
     "tailwindcss-radix-ui-primitives": "1.0.0",
+    "ts-pattern": "5.0.5",
     "undici": "5.26.5",
     "usehooks-ts": "2.9.1",
     "znv": "0.4.0",
@@ -88,6 +91,7 @@
     "@remix-run/eslint-config": "2.1.0",
     "@tailwindcss/forms": "0.5.6",
     "@tailwindcss/typography": "0.5.10",
+    "@types/bcryptjs": "2.4.6",
     "@types/eslint": "8.44.6",
     "@types/node": "20.8.9",
     "@types/react": "^18.2.36",
