--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@balavishnuvj/remix-seo": "1.0.2",
     "@conform-to/react": "0.9.0",
     "@conform-to/zod": "0.9.0",
     "@fontsource-variable/grandstander": "5.0.18",
@@ -63,6 +64,7 @@
     "bcryptjs": "2.4.3",
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
+    "dayjs": "1.11.10",
     "dotenv": "16.3.1",
     "isbot": "^3.7.0",
     "pluralize": "8.0.0",
