chore: install nprogress and remix-seo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,24 +1,24 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#766181",
-    "activityBar.background": "#766181",
+    "activityBar.activeBackground": "#3f3ba7",
+    "activityBar.background": "#3f3ba7",
     "activityBar.foreground": "#e7e7e7",
     "activityBar.inactiveForeground": "#e7e7e799",
-    "activityBarBadge.background": "#483718",
+    "activityBarBadge.background": "#c55e5a",
     "activityBarBadge.foreground": "#e7e7e7",
     "commandCenter.border": "#e7e7e799",
-    "sash.hoverBorder": "#766181",
-    "statusBar.background": "#5b4b64",
+    "sash.hoverBorder": "#3f3ba7",
+    "statusBar.background": "#312e81",
     "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#766181",
-    "statusBarItem.remoteBackground": "#5b4b64",
+    "statusBarItem.hoverBackground": "#3f3ba7",
+    "statusBarItem.remoteBackground": "#312e81",
     "statusBarItem.remoteForeground": "#e7e7e7",
-    "titleBar.activeBackground": "#5b4b64",
+    "titleBar.activeBackground": "#312e81",
     "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.inactiveBackground": "#5b4b6499",
+    "titleBar.inactiveBackground": "#312e8199",
     "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#5B4B64",
+  "peacock.color": "#312e81",
   "cSpell.words": [
     "Allnimal",
     "Bearmentor",
