--- a/package.json
+++ b/package.json
@@ -41,12 +41,12 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@balavishnuvj/remix-seo": "1.0.2",
     "@conform-to/react": "0.9.0",
     "@conform-to/zod": "0.9.0",
     "@fontsource-variable/grandstander": "5.0.18",
     "@fontsource-variable/inconsolata": "5.0.15",
     "@fontsource/inter": "5.0.15",
+    "@nasa-gcn/remix-seo": "2.0.0",
     "@planetscale/database": "1.11.0",
     "@prisma/adapter-planetscale": "5.5.2",
     "@prisma/client": "5.5.2",
@@ -59,6 +59,8 @@
     "@remix-run/react": "^2.2.0",
     "@remix-run/serve": "^2.2.0",
     "@remix-run/server-runtime": "2.2.0",
+    "@tanem/react-nprogress": "5.0.51",
+    "@types/nprogress": "0.2.3",
     "@types/pluralize": "0.0.32",
     "@uidotdev/usehooks": "2.4.1",
     "bcryptjs": "2.4.3",
@@ -67,6 +69,7 @@
     "dayjs": "1.11.10",
     "dotenv": "16.3.1",
     "isbot": "^3.7.0",
+    "nprogress": "0.2.0",
     "pluralize": "8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
