feat: nprogress loading bar

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# For application usage
+# For application
 NODE_ENV=
 APP_URL=
 DATABASE_URL=
@@ -8,7 +8,7 @@ SESSION_SECRET=
 RESEND_API_KEY=
 UPLOADCARE_PUBLIC_KEY=
 
-# For auth
+# For OAuth
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 GOOGLE_CLIENT_ID=
