--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "remix build",
     "dev": "remix dev --manual",
     "dev:check": "pnpm check:env && remix dev --manual",
-    "dev:prod": "dotenv -e .env.production pnpm check:env",
+    "build": "remix build",
     "start": "remix-serve ./build/index.js",
     "check": "pnpm /^check:.*/",
     "check:env": "tsx scripts/check-env.ts",
@@ -22,6 +21,7 @@
     "fix:eslint": "eslint --cache --fix .",
     "fix:stylelint": "stylelint --cache --fix ./app/styles/*.css",
     "fix:prisma": "prisma format && prisma validate",
+    "debug:eslint": "DEBUG=eslint:cli-engine pnpm check:eslint",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:reset": "prisma db push --force-reset",
@@ -29,12 +29,12 @@
     "db:seed": "prisma db seed",
     "db:studio": "prisma studio",
     "db:docs": "prisma-docs-generator serve",
-    "db:push:prod": "dotenv -e .env.production prisma db push",
-    "db:reset:prod": "dotenv -e .env.production prisma db push --force-reset",
-    "db:migrate:prod": "dotenv -e .env.production prisma migrate dev",
-    "db:seed:prod": "dotenv -e .env.production prisma db seed",
-    "db:studio:prod": "dotenv -e .env.production prisma studio",
-    "debug:eslint": "DEBUG=eslint:cli-engine nr check:lint",
+    "prod:dev": "dotenv -e .env.production pnpm check:env",
+    "prod:db:push": "dotenv -e .env.production prisma db push",
+    "prod:db:reset": "dotenv -e .env.production prisma db push --force-reset",
+    "prod:db:migrate": "dotenv -e .env.production prisma migrate dev",
+    "prod:db:seed": "dotenv -e .env.production prisma db seed",
+    "prod:db:studio": "dotenv -e .env.production prisma studio",
     "clean": "rm -rf build public/build",
     "taze": "taze",
     "prebuild": "prisma db push",
@@ -60,7 +60,6 @@
     "@remix-run/serve": "^2.2.0",
     "@remix-run/server-runtime": "2.2.0",
     "@tanem/react-nprogress": "5.0.51",
-    "@types/nprogress": "0.2.3",
     "@types/pluralize": "0.0.32",
     "@uidotdev/usehooks": "2.4.1",
     "bcryptjs": "2.4.3",
@@ -69,7 +68,6 @@
     "dayjs": "1.11.10",
     "dotenv": "16.3.1",
     "isbot": "^3.7.0",
-    "nprogress": "0.2.0",
     "pluralize": "8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
