--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@prisma/adapter-planetscale": "5.5.2",
     "@prisma/client": "5.5.2",
     "@radix-ui/react-avatar": "1.0.4",
+    "@radix-ui/react-collapsible": "1.0.3",
     "@radix-ui/react-dropdown-menu": "2.0.6",
     "@radix-ui/react-label": "2.0.2",
     "@radix-ui/react-slot": "1.0.2",
