--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "db:reset": "prisma db push --force-reset",
     "db:migrate": "prisma migrate dev",
     "db:seed": "prisma db seed",
-    "db:studio": "prisma studio",
+    "db:studio": "prisma studio --browser none",
     "db:docs": "prisma-docs-generator serve",
     "prod:check:data": "dotenv -e .env.production tsx scripts/check-data.ts",
     "prod:dev": "dotenv -e .env.production pnpm check:env",
@@ -36,7 +36,7 @@
     "prod:db:reset": "dotenv -e .env.production prisma db push --force-reset",
     "prod:db:migrate": "dotenv -e .env.production prisma migrate dev",
     "prod:db:seed": "dotenv -e .env.production prisma db seed",
-    "prod:db:studio": "dotenv -e .env.production prisma studio",
+    "prod:db:studio": "dotenv -e .env.production prisma studio --browser none",
     "clean": "rm -rf .cache build public/build",
     "taze": "taze",
     "postinstall": "prisma generate"
