feat: post with slug, seed posts

--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "remix-auth-google": "1.3.0",
     "remix-themes": "1.2.2",
     "remix-utils": "7.1.0",
+    "slugify": "1.6.6",
     "tailwind-merge": "1.14.0",
     "tailwindcss-animate": "1.0.7",
     "tailwindcss-radix-ui-primitives": "1.0.0",
