--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "dayjs": "1.11.10",
     "dotenv": "16.3.1",
     "isbot": "^3.7.0",
+    "nanoid": "5.0.3",
     "pluralize": "8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
