--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "start": "remix-serve ./build/index.js",
     "check": "pnpm /^check:.*/",
     "check:env": "tsx scripts/check-env.ts",
-    "check:env:prod": "dotenv -e .env.production tsx scripts/check-env.ts",
     "check:tsc": "tsc --noEmit",
     "check:prettier": "prettier --cache --check '**/*.{js,mjs,cjs,ts,tsx,json,md,mdx}'",
     "check:eslint": "eslint --cache .",
@@ -30,8 +29,9 @@
     "db:seed": "prisma db seed",
     "db:studio": "prisma studio --browser none",
     "db:docs": "prisma-docs-generator serve",
+    "prod:dev": "dotenv -e .env.production remix dev --manual",
+    "prod:check:env": "dotenv -e .env.production tsx scripts/check-env.ts",
     "prod:check:data": "dotenv -e .env.production tsx scripts/check-data.ts",
-    "prod:dev": "dotenv -e .env.production pnpm check:env",
     "prod:db:push": "dotenv -e .env.production prisma db push",
     "prod:db:reset": "dotenv -e .env.production prisma db push --force-reset",
     "prod:db:migrate": "dotenv -e .env.production prisma migrate dev",
@@ -64,7 +64,6 @@
     "@radix-ui/react-dialog": "1.0.5",
     "@radix-ui/react-dropdown-menu": "2.0.6",
     "@radix-ui/react-hover-card": "1.0.7",
-    "@radix-ui/react-icons": "1.3.0",
     "@radix-ui/react-label": "2.0.2",
     "@radix-ui/react-menubar": "1.0.4",
     "@radix-ui/react-navigation-menu": "1.1.4",
@@ -97,7 +96,6 @@
     "dayjs": "1.11.10",
     "dotenv": "16.3.1",
     "isbot": "^3.7.0",
-    "lucide-react": "0.292.0",
     "nanoid": "5.0.3",
     "pluralize": "8.0.0",
     "react": "^18.2.0",
