--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# For application
+# For app
 NODE_ENV=
 APP_URL=
 SESSION_SECRET=
@@ -14,8 +14,9 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
 # For services
-UPLOADCARE_PUBLIC_KEY=
-RESEND_API_KEY=
+UPLOADCARE_KEY=
+RESEND_KEY=
+POSTHOG_KEY=
 
 # For container with Docker Compose
 MYSQL_ROOT_PASSWORD=
