--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "db:migrate": "prisma migrate dev",
     "db:seed": "prisma db seed",
     "db:studio": "prisma studio --browser none",
+    "db:debug": "prisma debug",
     "db:docs": "prisma-docs-generator serve",
     "prod:dev": "dotenv -e .env.production remix dev --manual",
     "prod:check:env": "dotenv -e .env.production tsx scripts/check-env.ts",
@@ -47,13 +48,12 @@
     "@fontsource-variable/archivo": "5.0.16",
     "@fontsource-variable/chivo-mono": "5.0.18",
     "@fontsource-variable/grandstander": "5.0.18",
-    "@fontsource-variable/inconsolata": "5.0.15",
     "@fontsource-variable/inter": "5.0.15",
     "@fontsource/inter": "5.0.15",
     "@nasa-gcn/remix-seo": "2.0.0",
     "@planetscale/database": "1.11.0",
-    "@prisma/adapter-planetscale": "5.5.2",
-    "@prisma/client": "5.5.2",
+    "@prisma/adapter-planetscale": "5.6.0",
+    "@prisma/client": "5.6.0",
     "@radix-ui/react-accordion": "1.1.2",
     "@radix-ui/react-alert-dialog": "1.0.5",
     "@radix-ui/react-aspect-ratio": "1.0.3",
@@ -140,7 +140,7 @@
     "prettier": "3.0.3",
     "prettier-plugin-organize-imports": "3.2.3",
     "prettier-plugin-tailwindcss": "0.5.6",
-    "prisma": "5.5.2",
+    "prisma": "5.6.0",
     "prisma-docs-generator": "0.8.0",
     "stylelint": "^15.11.0",
     "stylelint-config-standard": "^34.0.0",
