--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@types/pluralize": "0.0.32",
     "@uidotdev/usehooks": "2.4.1",
     "bcryptjs": "2.4.3",
+    "chalk": "5.3.0",
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
     "cmdk": "0.2.0",
