--- a/.env.example
+++ b/.env.example
@@ -18,10 +18,17 @@ UPLOADCARE_KEY=
 RESEND_KEY=
 POSTHOG_KEY=
 
-# For container with Docker Compose
+# For MySQL container with Docker Compose
 MYSQL_ROOT_PASSWORD=
 MYSQL_USER=
 MYSQL_PASSWORD=
 MYSQL_DATABASE=
 MYSQL_HOST_PORT=
 MYSQL_CONTAINER_PORT=
+
+# For PostgreSQL container with Docker Compose (Optional)
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DATABASE=
+POSTGRES_HOST_PORT=
+POSTGRES_CONTAINER_PORT=
