--- a/package.json
+++ b/package.json
@@ -86,6 +86,12 @@
     "@remix-run/serve": "^2.3.1",
     "@remix-run/server-runtime": "2.3.0",
     "@tanem/react-nprogress": "5.0.51",
+    "@tiptap/extension-highlight": "2.1.12",
+    "@tiptap/extension-typography": "2.1.12",
+    "@tiptap/extension-underline": "2.1.12",
+    "@tiptap/pm": "2.1.12",
+    "@tiptap/react": "2.1.12",
+    "@tiptap/starter-kit": "2.1.12",
     "@types/pluralize": "0.0.33",
     "@uidotdev/usehooks": "2.4.1",
     "bcryptjs": "2.4.3",
