feat: refine env example and README

--- a/.env.example
+++ b/.env.example
@@ -1,34 +1,34 @@
 # For app
-NODE_ENV=
-APP_URL=
-SESSION_SECRET=
+NODE_ENV="development"
+APP_URL="http://localhost:3000"
+SESSION_SECRET="replace_this"
 
 # For database
-DATABASE_URL=
-DATABASE_BRANCH=
+DATABASE_URL="mysql://user:password@localhost:3306/dogokit-remix"
+DATABASE_BRANCH="local"
 
 # For OAuth
-GITHUB_CLIENT_ID=
-GITHUB_CLIENT_SECRET=
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GITHUB_CLIENT_ID="replace_this"
+GITHUB_CLIENT_SECRET="replace_this"
+GOOGLE_CLIENT_ID="replace_this"
+GOOGLE_CLIENT_SECRET="replace_this"
 
 # For services
-UPLOADCARE_KEY=
-RESEND_KEY=
-POSTHOG_KEY=
+UPLOADCARE_KEY="replace_this"
+RESEND_KEY="replace_this"
+POSTHOG_KEY="replace_this"
 
-# For MySQL container with Docker Compose
-MYSQL_ROOT_PASSWORD=
-MYSQL_USER=
-MYSQL_PASSWORD=
-MYSQL_DATABASE=
-MYSQL_HOST_PORT=
-MYSQL_CONTAINER_PORT=
+# For MySQL container with Docker Compose (Optional)
+MYSQL_ROOT_PASSWORD="replace_this"
+MYSQL_USER="user"
+MYSQL_PASSWORD="password"
+MYSQL_DATABASE="dogokit-remix"
+MYSQL_HOST_PORT="3306"
+MYSQL_CONTAINER_PORT="3306"
 
 # For PostgreSQL container with Docker Compose (Optional)
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DATABASE=
-POSTGRES_HOST_PORT=
-POSTGRES_CONTAINER_PORT=
+POSTGRES_USER="user"
+POSTGRES_PASSWORD="password"
+POSTGRES_DATABASE="dogokit-remix"
+POSTGRES_HOST_PORT="5432"
+POSTGRES_CONTAINER_PORT="5432"
