feat: refine seed roles and check data

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "db:push": "prisma db push",
     "db:reset": "prisma db push --force-reset",
     "db:migrate": "prisma migrate dev",
-    "db:seed": "prisma db seed",
+    "db:seed": "prisma db seed && pnpm check:data",
     "db:studio": "prisma studio --browser none",
     "db:debug": "prisma debug",
     "db:docs": "prisma-docs-generator serve",
@@ -36,7 +36,7 @@
     "prod:db:push": "dotenv -e .env.production prisma db push",
     "prod:db:reset": "dotenv -e .env.production prisma db push --force-reset",
     "prod:db:migrate": "dotenv -e .env.production prisma migrate dev",
-    "prod:db:seed": "dotenv -e .env.production prisma db seed",
+    "prod:db:seed": "dotenv -e .env.production prisma db seed && pnpm prod:check:data",
     "prod:db:studio": "dotenv -e .env.production prisma studio --browser none",
     "clean": "rm -rf .cache build public/build",
     "taze": "taze",
