--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "@remix-run/serve": "^2.3.1",
     "@remix-run/server-runtime": "2.3.0",
     "@tanem/react-nprogress": "5.0.51",
+    "@tiptap/core": "2.1.12",
     "@tiptap/extension-highlight": "2.1.12",
     "@tiptap/extension-typography": "2.1.12",
     "@tiptap/extension-underline": "2.1.12",
@@ -105,6 +106,7 @@
     "html-react-parser": "5.0.6",
     "isbot": "^3.7.1",
     "nanoid": "5.0.3",
+    "novel": "0.1.22",
     "pluralize": "8.0.0",
     "react": "^18.2.0",
     "react-day-picker": "8.9.1",
