--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "fix:stylelint": "stylelint --cache --fix ./app/styles/*.css",
     "fix:prisma": "prisma format && prisma validate",
     "debug:eslint": "DEBUG=eslint:cli-engine pnpm check:eslint",
-    "db:generate": "prisma generate",
+    "db:gen": "prisma generate",
     "db:push": "prisma db push",
     "db:reset": "prisma db push --force-reset",
     "db:migrate": "prisma migrate dev",
@@ -43,122 +43,122 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@conform-to/react": "0.9.1",
-    "@conform-to/zod": "0.9.1",
-    "@fontsource-variable/archivo": "5.0.16",
-    "@fontsource-variable/chivo-mono": "5.0.18",
-    "@fontsource-variable/grandstander": "5.0.18",
-    "@fontsource-variable/inter": "5.0.15",
-    "@fontsource/inter": "5.0.15",
-    "@nasa-gcn/remix-seo": "2.0.0",
-    "@planetscale/database": "1.11.0",
-    "@prisma/adapter-planetscale": "5.6.0",
-    "@prisma/client": "5.6.0",
-    "@radix-ui/react-accordion": "1.1.2",
-    "@radix-ui/react-alert-dialog": "1.0.5",
-    "@radix-ui/react-aspect-ratio": "1.0.3",
-    "@radix-ui/react-avatar": "1.0.4",
-    "@radix-ui/react-checkbox": "1.0.4",
-    "@radix-ui/react-collapsible": "1.0.3",
-    "@radix-ui/react-context-menu": "2.1.5",
-    "@radix-ui/react-dialog": "1.0.5",
-    "@radix-ui/react-dropdown-menu": "2.0.6",
-    "@radix-ui/react-hover-card": "1.0.7",
-    "@radix-ui/react-label": "2.0.2",
-    "@radix-ui/react-menubar": "1.0.4",
-    "@radix-ui/react-navigation-menu": "1.1.4",
-    "@radix-ui/react-popover": "1.0.7",
-    "@radix-ui/react-progress": "1.0.3",
-    "@radix-ui/react-radio-group": "1.1.3",
-    "@radix-ui/react-scroll-area": "1.0.5",
-    "@radix-ui/react-select": "2.0.0",
-    "@radix-ui/react-separator": "1.0.3",
-    "@radix-ui/react-slider": "1.1.2",
-    "@radix-ui/react-slot": "1.0.2",
-    "@radix-ui/react-switch": "1.0.3",
-    "@radix-ui/react-tabs": "1.0.4",
-    "@radix-ui/react-toast": "1.1.5",
-    "@radix-ui/react-toggle": "1.0.3",
-    "@radix-ui/react-tooltip": "1.0.7",
+    "@conform-to/react": "^0.9.1",
+    "@conform-to/zod": "^0.9.1",
+    "@fontsource-variable/archivo": "^5.0.16",
+    "@fontsource-variable/chivo-mono": "^5.0.18",
+    "@fontsource-variable/grandstander": "^5.0.18",
+    "@fontsource-variable/inter": "^5.0.15",
+    "@fontsource/inter": "^5.0.15",
+    "@nasa-gcn/remix-seo": "^2.0.0",
+    "@planetscale/database": "^1.11.0",
+    "@prisma/adapter-planetscale": "^5.6.0",
+    "@prisma/client": "^5.6.0",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-collapsible": "^1.0.3",
+    "@radix-ui/react-context-menu": "^2.1.5",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-hover-card": "^1.0.7",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-menubar": "^1.0.4",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slider": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@remix-run/css-bundle": "^2.3.1",
     "@remix-run/node": "^2.3.1",
     "@remix-run/react": "^2.3.1",
     "@remix-run/serve": "^2.3.1",
-    "@remix-run/server-runtime": "2.3.0",
-    "@tanem/react-nprogress": "5.0.51",
-    "@tiptap/core": "2.1.12",
-    "@tiptap/extension-highlight": "2.1.12",
-    "@tiptap/extension-typography": "2.1.12",
-    "@tiptap/extension-underline": "2.1.12",
-    "@tiptap/pm": "2.1.12",
-    "@tiptap/react": "2.1.12",
-    "@tiptap/starter-kit": "2.1.12",
-    "@types/pluralize": "0.0.33",
-    "@uidotdev/usehooks": "2.4.1",
-    "bcryptjs": "2.4.3",
-    "chalk": "5.3.0",
-    "class-variance-authority": "0.7.0",
-    "clsx": "2.0.0",
-    "cmdk": "0.2.0",
-    "date-fns": "2.30.0",
-    "dayjs": "1.11.10",
-    "dotenv": "16.3.1",
-    "html-react-parser": "5.0.6",
+    "@remix-run/server-runtime": "^2.3.1",
+    "@tanem/react-nprogress": "^5.0.51",
+    "@tiptap/core": "^2.1.12",
+    "@tiptap/extension-highlight": "^2.1.12",
+    "@tiptap/extension-typography": "^2.1.12",
+    "@tiptap/extension-underline": "^2.1.12",
+    "@tiptap/pm": "^2.1.12",
+    "@tiptap/react": "^2.1.12",
+    "@tiptap/starter-kit": "^2.1.12",
+    "@types/pluralize": "^0.0.33",
+    "@uidotdev/usehooks": "^2.4.1",
+    "bcryptjs": "^2.4.3",
+    "chalk": "^5.3.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "cmdk": "^0.2.0",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
+    "dotenv": "^16.3.1",
+    "html-react-parser": "^5.0.6",
     "isbot": "^3.7.1",
-    "nanoid": "5.0.3",
-    "novel": "0.1.22",
-    "pluralize": "8.0.0",
+    "nanoid": "^5.0.3",
+    "novel": "^0.1.22",
+    "pluralize": "^8.0.0",
     "react": "^18.2.0",
-    "react-day-picker": "8.9.1",
+    "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
-    "remix-auth": "3.6.0",
-    "remix-auth-form": "1.4.0",
-    "remix-auth-github": "1.6.0",
-    "remix-auth-google": "2.0.0",
-    "remix-themes": "1.2.2",
-    "remix-utils": "7.1.0",
-    "slugify": "1.6.6",
-    "string-strip-html": "13.4.3",
-    "tailwind-merge": "2.0.0",
-    "tailwindcss-animate": "1.0.7",
-    "tailwindcss-radix-ui-primitives": "1.0.0",
-    "ts-pattern": "5.0.5",
-    "undici": "5.27.2",
-    "usehooks-ts": "2.9.1",
-    "znv": "0.4.0",
-    "zod": "3.22.4",
-    "zod-form-data": "2.0.2",
-    "zodix": "0.4.4"
+    "remix-auth": "^3.6.0",
+    "remix-auth-form": "^1.4.0",
+    "remix-auth-github": "^1.6.0",
+    "remix-auth-google": "^2.0.0",
+    "remix-themes": "^1.2.2",
+    "remix-utils": "^7.3.0",
+    "slugify": "^1.6.6",
+    "string-strip-html": "^13.4.3",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-radix-ui-primitives": "^1.0.0",
+    "ts-pattern": "^5.0.5",
+    "undici": "^5.28.1",
+    "usehooks-ts": "^2.9.1",
+    "znv": "^0.4.0",
+    "zod": "^3.22.4",
+    "zod-form-data": "^2.0.2",
+    "zodix": "^0.4.4"
   },
   "devDependencies": {
-    "@iconify/react": "4.1.1",
+    "@iconify/react": "^4.1.1",
     "@remix-run/dev": "^2.3.1",
-    "@remix-run/eslint-config": "2.3.0",
-    "@tailwindcss/forms": "0.5.7",
-    "@tailwindcss/typography": "0.5.10",
-    "@types/bcryptjs": "2.4.6",
-    "@types/eslint": "8.44.7",
-    "@types/node": "20.9.4",
-    "@types/react": "^18.2.38",
+    "@remix-run/eslint-config": "^2.3.1",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/eslint": "^8.44.7",
+    "@types/node": "^20.10.0",
+    "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.17",
-    "autoprefixer": "10.4.16",
-    "dotenv-cli": "7.3.0",
+    "autoprefixer": "^10.4.16",
+    "dotenv-cli": "^7.3.0",
     "eslint": "^8.54.0",
-    "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-import": "2.29.0",
-    "eslint-plugin-prettier": "5.0.1",
-    "eslint-plugin-tailwindcss": "3.13.0",
-    "prettier": "3.1.0",
-    "prettier-plugin-organize-imports": "3.2.4",
-    "prettier-plugin-tailwindcss": "0.5.7",
-    "prisma": "5.6.0",
-    "prisma-docs-generator": "0.8.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-tailwindcss": "^3.13.0",
+    "prettier": "^3.1.0",
+    "prettier-plugin-organize-imports": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.5.7",
+    "prisma": "^5.6.0",
+    "prisma-docs-generator": "^0.8.0",
     "stylelint": "^15.11.0",
     "stylelint-config-standard": "^34.0.0",
     "stylelint-config-tailwindcss": "^0.0.7",
-    "tailwindcss": "3.3.5",
-    "taze": "0.12.0",
-    "tsx": "4.2.0",
+    "tailwindcss": "^3.3.5",
+    "taze": "^0.12.2",
+    "tsx": "^4.6.0",
     "typescript": "^5.3.2"
   },
   "engines": {
