--- a/package.json
+++ b/package.json
@@ -48,8 +48,7 @@
     "@fontsource-variable/archivo": "^5.0.16",
     "@fontsource-variable/chivo-mono": "^5.0.18",
     "@fontsource-variable/grandstander": "^5.0.18",
-    "@fontsource-variable/inter": "^5.0.15",
-    "@fontsource/inter": "^5.0.15",
+    "@fontsource-variable/public-sans": "5.0.16",
     "@nasa-gcn/remix-seo": "^2.0.0",
     "@planetscale/database": "^1.11.0",
     "@prisma/adapter-planetscale": "^5.6.0",
