--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "remix-auth-github": "^1.6.0",
     "remix-auth-google": "^2.0.0",
     "remix-themes": "^1.2.2",
+    "remix-typedjson": "0.4.1",
     "remix-utils": "^7.3.0",
     "slugify": "^1.6.6",
     "string-strip-html": "^13.4.3",
