--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "prod:db:seed": "dotenv -e .env.production prisma db seed && pnpm prod:check:data",
     "prod:db:studio": "dotenv -e .env.production prisma studio --browser none",
     "clean": "rm -rf .cache build public/build",
-    "taze": "taze",
+    "upgrade": "taze",
+    "knip": "knip",
+    "analyze": "pnpm clean && dpdm **/*.*",
     "postinstall": "prisma generate"
   },
   "dependencies": {
@@ -143,11 +145,13 @@
     "@types/react-dom": "^18.2.17",
     "autoprefixer": "^10.4.16",
     "dotenv-cli": "^7.3.0",
+    "dpdm": "3.14.0",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-tailwindcss": "^3.13.0",
+    "knip": "3.3.0",
     "prettier": "^3.1.0",
     "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.7",
