feat: change fonts and upgrade deps

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,26 +13,26 @@
     "fontsource",
     "planetscale"
   ],
-  "peacock.color": "#312e81",
+  "peacock.color": "#1e1b4b",
   "remix-forge.componentFolder": "/app/components/ui",
   "tailwindCSS.experimental.classRegex": ["class:\\s*?[\"'`]([^\"'`]*).*?,"],
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#3f3ba7",
-    "activityBar.background": "#3f3ba7",
+    "activityBar.activeBackground": "#2d2970",
+    "activityBar.background": "#2d2970",
     "activityBar.foreground": "#e7e7e7",
     "activityBar.inactiveForeground": "#e7e7e799",
-    "activityBarBadge.background": "#c55e5a",
+    "activityBarBadge.background": "#a3423c",
     "activityBarBadge.foreground": "#e7e7e7",
     "commandCenter.border": "#e7e7e799",
-    "sash.hoverBorder": "#3f3ba7",
-    "statusBar.background": "#312e81",
+    "sash.hoverBorder": "#2d2970",
+    "statusBar.background": "#1e1b4b",
     "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#3f3ba7",
-    "statusBarItem.remoteBackground": "#312e81",
+    "statusBarItem.hoverBackground": "#2d2970",
+    "statusBarItem.remoteBackground": "#1e1b4b",
     "statusBarItem.remoteForeground": "#e7e7e7",
-    "titleBar.activeBackground": "#312e81",
+    "titleBar.activeBackground": "#1e1b4b",
     "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.inactiveBackground": "#312e8199",
+    "titleBar.inactiveBackground": "#1e1b4b99",
     "titleBar.inactiveForeground": "#e7e7e799"
   }
 }
