--- a/package.json
+++ b/package.json
@@ -47,12 +47,10 @@
   "dependencies": {
     "@conform-to/react": "^0.9.1",
     "@conform-to/zod": "^0.9.1",
-    "@fontsource-variable/archivo": "^5.0.16",
-    "@fontsource-variable/chivo-mono": "^5.0.18",
-    "@fontsource-variable/grandstander": "^5.0.18",
+    "@fontsource-variable/anybody": "5.0.19",
     "@fontsource-variable/inter": "5.0.15",
     "@nasa-gcn/remix-seo": "^2.0.0",
-    "@prisma/client": "^5.6.0",
+    "@prisma/client": "^5.7.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -85,13 +83,13 @@
     "@remix-run/serve": "^2.3.1",
     "@remix-run/server-runtime": "^2.3.1",
     "@tanem/react-nprogress": "^5.0.51",
-    "@tiptap/core": "^2.1.12",
-    "@tiptap/extension-highlight": "^2.1.12",
-    "@tiptap/extension-typography": "^2.1.12",
-    "@tiptap/extension-underline": "^2.1.12",
-    "@tiptap/pm": "^2.1.12",
-    "@tiptap/react": "^2.1.12",
-    "@tiptap/starter-kit": "^2.1.12",
+    "@tiptap/core": "^2.1.13",
+    "@tiptap/extension-highlight": "^2.1.13",
+    "@tiptap/extension-typography": "^2.1.13",
+    "@tiptap/extension-underline": "^2.1.13",
+    "@tiptap/pm": "^2.1.13",
+    "@tiptap/react": "^2.1.13",
+    "@tiptap/starter-kit": "^2.1.13",
     "@types/pluralize": "^0.0.33",
     "bcryptjs": "^2.4.3",
     "chalk": "^5.3.0",
@@ -100,9 +98,9 @@
     "cmdk": "^0.2.0",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
-    "html-react-parser": "^5.0.6",
+    "html-react-parser": "^5.0.7",
     "isbot": "^3.7.1",
-    "nanoid": "^5.0.3",
+    "nanoid": "^5.0.4",
     "novel": "^0.1.22",
     "pluralize": "^8.0.0",
     "react": "^18.2.0",
@@ -115,10 +113,10 @@
     "remix-themes": "^1.2.2",
     "slugify": "^1.6.6",
     "string-strip-html": "^13.4.3",
-    "tailwind-merge": "^2.0.0",
+    "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-radix-ui-primitives": "^1.0.0",
-    "ts-pattern": "^5.0.5",
+    "ts-pattern": "^5.0.6",
     "znv": "^0.4.0",
     "zod": "^3.22.4",
     "zod-form-data": "^2.0.2",
@@ -131,31 +129,31 @@
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "@types/bcryptjs": "^2.4.6",
-    "@types/eslint": "^8.44.7",
-    "@types/node": "^20.10.0",
-    "@types/react": "^18.2.39",
+    "@types/eslint": "^8.44.8",
+    "@types/node": "^20.10.3",
+    "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
     "autoprefixer": "^10.4.16",
     "dotenv-cli": "^7.3.0",
     "dpdm": "3.14.0",
-    "eslint": "^8.54.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint": "^8.55.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "knip": "3.3.0",
     "prettier": "^3.1.0",
     "prettier-plugin-organize-imports": "^3.2.4",
-    "prettier-plugin-tailwindcss": "^0.5.7",
-    "prisma": "^5.6.0",
+    "prettier-plugin-tailwindcss": "^0.5.9",
+    "prisma": "^5.7.0",
     "prisma-docs-generator": "^0.8.0",
     "stylelint": "^15.11.0",
     "stylelint-config-standard": "^34.0.0",
     "stylelint-config-tailwindcss": "^0.0.7",
-    "tailwindcss": "^3.3.5",
-    "taze": "^0.12.2",
-    "tsx": "^4.6.0",
-    "typescript": "^5.3.2"
+    "tailwindcss": "^3.3.6",
+    "taze": "^0.13.0",
+    "tsx": "^4.6.2",
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18.0.0"
