feat: refine example components nav

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -15,6 +15,7 @@
     "stylelint.vscode-stylelint",
     "usernamehw.errorlens",
     "yoavbls.pretty-ts-errors",
-    "yzhang.markdown-all-in-one"
+    "yzhang.markdown-all-in-one",
+    "mhutchie.git-graph"
   ]
 }
