--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@tanem/react-nprogress": "^5.0.51",
     "@tiptap/core": "^2.1.13",
     "@tiptap/extension-highlight": "^2.1.13",
+    "@tiptap/extension-link": "2.1.13",
     "@tiptap/extension-typography": "^2.1.13",
     "@tiptap/extension-underline": "^2.1.13",
     "@tiptap/pm": "^2.1.13",
